Added location permissions retrieve coordinates and reverse geocode for city name

--- a/Twaddle/Info.plist
+++ b/Twaddle/Info.plist
@@ -41,5 +41,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>App needs location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>App needs location</string>
 </dict>
 </plist>
